--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-use-gesture": "^9.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -47,7 +48,7 @@
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "typescript": "^4.0.3",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "typescript": "^4.0.3"
   }
 }
