--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-use-gesture": "^9.1.3",
+    "react-use-measure": "^2.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
