--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-use-gesture": "^9.1.3",
-    "react-use-measure": "^2.0.3",
-    "web-vitals": "^0.2.4"
+    "react-use-measure": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,6 +49,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "web-vitals": "^0.2.4"
   }
 }
