--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
     "browser": true,
     "es2021": true
   },
+  "ignorePatterns": "docs/*",
   "extends": [
     "react-app",
     "react-app/jest",
