--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-use-gesture": "^9.1.3",
-    "react-use-measure": "^2.0.3",
-    "rebound": "^0.1.0"
+    "react-use-measure": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
