--- a/package.json
+++ b/package.json
@@ -1,10 +1,30 @@
 {
   "name": "react-tile-pane",
+  "author": "xcfox",
+  "description": "A React tiling pane manager",
   "version": "0.1.0",
-  "private": true,
+  "license": "MIT",
+  "keywords": [
+    "react",
+    "layout",
+    "tabs",
+    "drag-and-drop",
+    "drag",
+    "drop",
+    "tile",
+    "pane",
+    "react-dom",
+    "ui",
+    "component",
+    "typescript",
+    "tiling-window-manager",
+    "window-manager"
+  ],
+  "peerDependencies": {
+    "react": ">= 16.8",
+    "react-dom": ">= 16.8"
+  },
   "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "react-use-gesture": "^9.1.3",
     "react-use-measure": "^2.0.3"
   },
@@ -12,6 +32,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build-docs": "react-scripts build && node ./tools/buildDocs.js",
+    "build-pack": "tsc -p tsconfig.pack.json",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
