--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build-docs": "react-scripts build && node ./tools/buildDocs.js",
-    "build-pack": "tsc -p tsconfig.pack.json",
+    "build-pack": "tsc -p tsconfig.pack.json && yarn run copy-css && yarn run copy-package.json && cd dist && yarn pack",
+    "copy-css": "copyfiles -f src/components/tilePane/view/Provider/config/style.module.css dist/tilePane/view/Provider/config",
+    "copy-package.json": "copyfiles package.json dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
@@ -64,6 +66,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "copyfiles": "^2.4.1",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-config-react-app": "^6.0.0",
@@ -71,8 +74,11 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "ncp": "^2.0.0",
     "prettier": "^2.2.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-scripts": "^4.0.3",
     "typescript": "^4.0.3",
+    "typescript-plugin-css-modules": "^3.2.0",
     "web-vitals": "^0.2.4"
   }
 }
