--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-tile-pane",
   "author": "xcfox",
   "description": "A React tiling pane manager",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "license": "MIT",
   "keywords": [
     "react",
@@ -33,7 +33,7 @@
     "build": "react-scripts build",
     "build-docs": "react-scripts build && node ./tools/buildDocs.js",
     "build-pack": "tsc -p tsconfig.pack.json && yarn run copy-css && yarn run copy-package.json && cd dist && yarn pack",
-    "copy-css": "copyfiles -f src/components/tilePane/view/Provider/config/style.module.css dist/tilePane/view/Provider/config",
+    "copy-css": "copyfiles -f src/static/style.css dist",
     "copy-package.json": "copyfiles package.json dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
