--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-tile-pane",
   "author": "xcfox",
   "description": "A React tiling pane manager",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -26,11 +26,9 @@
   ],
   "peerDependencies": {
     "react": ">= 16.8",
-    "react-dom": ">= 16.8"
-  },
-  "dependencies": {
-    "react-use-gesture": "^9.1.3",
-    "react-use-measure": "^2.0.3"
+    "react-dom": ">= 16.8",
+    "react-use-gesture": ">= 9.1.3",
+    "react-use-measure": ">= 2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -82,6 +80,8 @@
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-use-gesture": "^9.1.3",
+    "react-use-measure": "^2.0.3",
     "react-scripts": "^4.0.3",
     "typescript": "^4.0.3",
     "typescript-plugin-css-modules": "^3.2.0",
