🐞fix(stopMovingTab): Compatible with react 18

--- a/.eslintrc
+++ b/.eslintrc
@@ -40,6 +40,7 @@
       }
     ], // 检查 effect 的依赖
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/no-empty-interface": "off"
+    "@typescript-eslint/no-empty-interface": "off",
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
