--- a/tsconfig.theme.json
+++ b/tsconfig.theme.json
@@ -5,6 +5,7 @@
     "declaration": true,
     "emitDeclarationOnly": true
   },
-  "include": ["src/components"],
+  "include": ["src/theme"],
+  "exclude": ["src/components"],
   "extends": "./tsconfig.json"
 }
